service.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-service
  labels:
    app: sample-service
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: sample-service
